--- a/candidature.html
+++ b/candidature.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title></title>
+    <title>Offre d'emplois</title>
+    <link rel="shortcut icon" href="img/logo.ico">
   </head>
   <body>
     <header id="navbar">
